Tiny index.html fix
+2 characters

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         
         <details>
         	<summary>dictind()</summary>
-            <div class="funccontent"><p>Returns value from a dictionary. Supports keys, values, items.</p><div class="codecontent">shoplist = {"fruits":"apple","vegetables":["carrot","potato"]}<br>print(dictind(shoplist, 2, value, 1))</div><div class="codecontent">> potato</div></div>
+            <div class="funccontent"><p>Returns value from a dictionary. Supports keys, values, items.</p><div class="codecontent">shoplist = {"fruits":"apple","vegetables":["carrot","potato"]}<br>print(dictind(shoplist, 2, "value", 1))</div><div class="codecontent">> potato</div></div>
         </details>
         
         <details>
