--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
     <details>
       <summary>dictind()</summary>
       <div class="funccontent">
-        <div class="deprecation-message">dictind() is deprecated and shouldn't be used. It will be deleted in the next update.</div>
+        <div class="deprecation-message"><s>dictind() is deprecated and shouldn't be used. It will be deleted in the next update.</s> Recursion will be added in the next update! </div>
         <p>Returns value from a dictionary. Supports keys, values, items.</p>
         <div class="codecontent">shoplist = {"fruits":"apple","vegetables":["carrot","potato"]} <br>print(dictind(shoplist, 2, "value", 1)) </div>
         <div class="codecontent">&gt; potato</div>
